extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/transform/tests/test3.out
Program(Vector((*,2)),Vector(),BinExpR(Num(1),*,BinExpR(Num(2),+,Factor(Var(x)))))
BinExp(BinExp(Num(1),*,Num(2)),+,Var(x))
src/test/scala/org/bitbucket/inkytonik/kiama/example/transform/tests/test3.exp:2:9:error: x is not declared
1 * 2 + x
        ^
